# yemen-market-analysis-v5

./: .env  .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  Makefile  Methodology.txt  README.md  UTILS_GUIDE.md  build.sh  check_functions.py  cleanup_cache.py  comprehensive_integration_plan.md  emen_Market_Integration_Project_Implementation_Plan.md  enhance_m1_decorator.py  enhance_memory_management.py  error_handling_guide.md  fix_cache_paths.py  fix_imports.py  generate_report.py  implementation_plan.md  implementation_plan_integration_tests.md  methodology_implementation_plan.md  remove_redundant_validation.py  requirements-dev.txt  requirements.txt  run_all_improvements.py  run_comprehensive_analysis.py  run_full_analysis.py  run_yemen_analysis.py  run_yemen_analysis_unified.py  setup.cfg  setup.py  standardize_cache_dirs.py  standardize_decorator_order.py  standardize_error_handling.py  tag_version.sh  test_insufficient_data.py  test_simple.py  threshold_models_refactoring_plan.md  yemen_market_analysis_implementation_plan.md
academic_paper/: main.bcf  main.tex
config/: settings.yaml
docs/: UTILS_GUIDE.md  best_practices.md  coding_standards.md  data_dictionary.md  econometric_methods.md  error_handling.md  implementation_plan.md  integration_modules.md  m3_pro_implementation_plan.md  models_guide.md  project_overview.md  spatial_analysis.md  threshold_analysis.md  time_series_analysis.md  utils.md
examples/: handle_insufficient_data.py  integrated_analysis_example.py
notebooks/: 00_project_initialization.ipynb  policy_simulation_walkthrough.ipynb
(+197 files in other folders)
