[metadata]
name = yemen-market-integration
description = Econometric analysis of market integration in Yemen
author = Yemen Market Integration Team
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 100
exclude = .git,venv,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*